Antes de añadir autenticación

--- a/src/Permiso/AuthBundle/Resources/views/layout.html.twig
+++ b/src/Permiso/AuthBundle/Resources/views/layout.html.twig
@@ -1,17 +1,26 @@
-{# /src/MDW/DemoBundle/views/layout.html.twig #}
-{% extends '::base.html.twig'  %} {# extendemos del layout por defecto #}
-
-{% block javascripts %}
-{# añadimos la CDN de jQuery o en su defecto lo descargamos e incluimos con:
-<script src="{{ asset('js/jquery-1.7.2.min.js') }}"></script>#}
-<script src="{{ asset('js/jquery-1.8.2.js') }}"></script>
-{% endblock javascripts %}
-
-{# creamos una estructura para el layout general #}
+{# src/MDW/DemoBundle/Resources/views/layout.html.twig #}
+{% extends '::base.html.twig' %}
+{% block stylesheets %}
+    {{ parent() }}
+    <link href="{{ asset('bundles/mdwdemo/css/main.css') }}" type="text/css" rel="stylesheet" />
+{% endblock %}
 {% block body %}
-<div>
-    <h1>Bienvenido a la gestoría de permisos</h1>
-    {# según el patrón de 3 niveles, creamos el bloque de contenido #}
-    {% block content %}{% endblock content %}
-</div>
-{% endblock body%}
+    <div id="layout">
+
+        <div id="header">
+            <h1>Bienvenido a la gestoría de permisos</h1>
+        </div>
+        <div id="content" class="clean" >
+            <div id="content_left">
+                {% block content %}
+                {% endblock %}
+            </div>
+            <div id="content_right">
+                columna
+            </div>
+        </div>
+        <div id="footer">
+            <p>Pie {{"now"|date("m/d/Y")}}</p>
+        </div>
+    </div>
+{% endblock %}
