Navegación por defecto dirigida al index

--- a/src/Permiso/AuthBundle/Resources/views/Security/nologin.html.twig
+++ b/src/Permiso/AuthBundle/Resources/views/Security/nologin.html.twig
@@ -1,2 +1,2 @@
-<p>Bienvenido, invitado. Pulse aquí para identificarse<p>
+<p>Bienvenido, invitado. <a href="{{ url('login') }}">Iniciar sesión</a><p>
 
