--- a/src/Permiso/AuthBundle/Resources/views/Security/login.html.twig
+++ b/src/Permiso/AuthBundle/Resources/views/Security/login.html.twig
@@ -5,10 +5,11 @@
 {% endif %}
  
 <form action="{{ path('login_check') }}" method="post">
-    <label for="username">Usuario:</label>
-    <input id="username" type="text" name="_username" value="{{ last_username }}" />
-    <label for="password">Contraseña:</label>
-    <input id="password" type="password" name="_password" /> <input type="submit" name="login" />
+    <p><label for="username">Usuario:</label></p>
+    <p><input id="username" type="text" name="_username" value="{{ last_username }}" /></p>
+    <p><label for="password">Contraseña:</label></p>
+    <p><input id="password" type="password" name="_password" /></p> 
+    <p><input type="submit" name="login" /></p>
 </form>
 {% endblock %}
 
