--- a/src/Permiso/AuthBundle/Resources/views/layout.html.twig
+++ b/src/Permiso/AuthBundle/Resources/views/layout.html.twig
@@ -13,16 +13,13 @@
             {% render "PermisoAuthBundle:Security:loginHelper" %}
             </div>
         <div id="content" class="clean" >
-            <div id="content_left">
+                
                 {% block content %}
                 {% endblock %}
-            </div>
-            <div id="content_right">
-                columna
-            </div>
+           
         </div>
         <div id="footer">
-            <p>Pie {{"now"|date("m/d/Y")}}</p>
+            <p>Footer {{"now"|date("m/d/Y")}}</p>
         </div>
     </div>
 {% endblock %}
