Creación de las entidades relacionadas con empleado y gestor.

--- a/src/Permiso/GestionBundle/Resources/views/Default/index.html.twig
+++ b/src/Permiso/GestionBundle/Resources/views/Default/index.html.twig
@@ -1,1 +1,4 @@
-Hello {{ name }}!
+{% extends 'PermisoAuthBundle::layout.html.twig' %}
+{% block content %}
+<p>Vista del index para el controlador Default del bundle Gestion</p>
+{% endblock %}
