--- a/src/Permiso/AuthBundle/Resources/views/Security/exito.html.twig
+++ b/src/Permiso/AuthBundle/Resources/views/Security/exito.html.twig
@@ -1,6 +1,8 @@
 {% extends 'PermisoAuthBundle::layout.html.twig' %}
 {% block content %}
-    <p>Usuario: {{ nombre.usuario }}</p>
-    <p>Contraseña: {{nombre.password }}</p>
-    <p>Roles: {{ permiso }}</p>
+   
+    <p>{{ empleado.username }}</p>
+    <p>{{ empleado.categoria.nombre }}</p>
+    <p>{{ empleado.categoria.nombreRol }}</p>
+    <p>{{ permiso }}</p>
 {% endblock %}
