Cambiados los permisos, añadido un inicio.html.twig una vez autentificado el usuario y comenzando a crear los formularios de entrada de solicitudes.

--- a/src/Permiso/GestionBundle/Resources/views/Default/gestor.html.twig
+++ b/src/Permiso/GestionBundle/Resources/views/Default/gestor.html.twig
@@ -1,4 +1,4 @@
 {% extends 'PermisoAuthBundle::layout.html.twig' %}
 {% block content %}
-<p>Por favor, introduzca sus credenciales.</p>
+<p>Zona de gestor</p>
 {% endblock %}
