Añadido un primer formulario de vacaciones.

--- a/src/Permiso/GestionBundle/Resources/views/Default/inicio.html.twig
+++ b/src/Permiso/GestionBundle/Resources/views/Default/inicio.html.twig
@@ -4,7 +4,7 @@
 <h4>Solicitud de permisos y vacaciones</h4>
 
 <p><a href="#">Solicitar un permiso</a></p>
-<p><a href="#">Solicitar días de vacaciones</a></p>
+<p><a href="{{ url('nuevas_vacaciones') }}">Solicitar días de vacaciones</a></p>
 <p><a href="#">Solicitudes pendientes de aprobacion</a></p>
 <p><a href="#">Solicitudes gestionadas y finalizadas</a></p>
 
