--- a/src/Permiso/GestionBundle/Resources/views/Solicitud/vacacionesForm.html.twig
+++ b/src/Permiso/GestionBundle/Resources/views/Solicitud/vacacionesForm.html.twig
@@ -1,7 +1,26 @@
 {% extends 'PermisoAuthBundle::layout.html.twig' %}
 {% block content %}
-<form action="{{ path('nuevas_vacaciones') }}" method="post">
-    {{ form_widget(form) }}
+<form novalidate="true" action="{{ path('nuevas_vacaciones') }}" method="post">    
+    
+    <div>
+        <p>{{ form_label(form.fechaInicio) }}</p>
+        <p>{{ form_errors(form.fechaInicio) }}</p>
+        <p>{{ form_widget(form.fechaInicio, { 'attr': {'class': 'campo'} }) }}</p>
+    </div>
+    
+    <div>
+        <p>{{ form_label(form.observaciones) }}</p>
+        <p>{{ form_errors(form.observaciones) }}</p>
+        <p>{{ form_widget(form.observaciones, { 'attr': {'class': 'campo'} }) }}</p>
+    </div>
+    
+    <div>
+        <p>{{ form_label(form.diasPedidos) }}</p>
+        <p>{{ form_errors(form.diasPedidos) }}</p>
+        <p>{{ form_widget(form.diasPedidos) }}</p>
+    </div>
+
+    {{ form_rest(form) }}
     <input type="submit" />
 </form>
 
