--- a/src/Permiso/GestionBundle/Resources/views/Solicitud/permisoForm.html.twig
+++ b/src/Permiso/GestionBundle/Resources/views/Solicitud/permisoForm.html.twig
@@ -27,4 +27,6 @@
     <input type="submit" />
 </form>
 
+<p><a href="{{ url('inicio_aplicacion') }}">Volver al menú principal</a></p>
+
 {% endblock %}
