--- a/src/Permiso/GestionBundle/Resources/views/Solicitud/vacacionesForm.html.twig
+++ b/src/Permiso/GestionBundle/Resources/views/Solicitud/vacacionesForm.html.twig
@@ -27,6 +27,8 @@
     <input type="submit" />
 </form>
 
+<p><a href="{{ url('inicio_aplicacion') }}">Volver al menú principal</a></p>
+
 {% endblock %}
 
 
