Añadido: - método único en el controlador para borrar solicitud (tanto vacaciones como permiso) - método para añadir permiso - cambios en las rutas para adecuarlas con los roles de acceso - modificación del formulario de vacaciones para reutilizarlo en acciones de añadir/editar - correcciones de código
Falta implementar el manejo de excepciones.

--- a/src/Permiso/GestionBundle/Resources/views/Solicitud/vacacionesForm.html.twig
+++ b/src/Permiso/GestionBundle/Resources/views/Solicitud/vacacionesForm.html.twig
@@ -3,7 +3,7 @@
 <h2>Solicitud de vacaciones</h2>
 <p>Por favor introduzca los siguientes datos:</p>
 
-<form novalidate="true" action="{{ path('nuevas_vacaciones') }}" method="post">    
+<form novalidate="true" action="{{ path(ruta) }}" method="post">    
     
     <div>
         <p>{{ form_label(form.fechaInicio) }}</p>
@@ -24,7 +24,7 @@
     </div>
 
     {{ form_rest(form) }}
-    <input type="submit" />
+    <input type="submit" value='{{ valorSubmit }}' />
 </form>
 
 <p><a href="{{ url('inicio_aplicacion') }}">Volver al menú principal</a></p>
