--- a/src/Permiso/AuthBundle/Resources/views/layout.html.twig
+++ b/src/Permiso/AuthBundle/Resources/views/layout.html.twig
@@ -19,7 +19,7 @@
            
         </div>
         <div id="footer">
-            <p>Footer {{"now"|date("m/d/Y")}}</p>
+            <p>Footer {{"now"|date("d/m/Y")}}</p>
         </div>
     </div>
 {% endblock %}
