--- a/src/Permiso/GestionBundle/Resources/views/Default/menuPrincipal.html.twig
+++ b/src/Permiso/GestionBundle/Resources/views/Default/menuPrincipal.html.twig
@@ -5,7 +5,7 @@
 
 <p><a href="{{ url('nuevo_permiso') }}">Solicitar un permiso</a></p>
 <p><a href="{{ url('nuevas_vacaciones') }}">Solicitar días de vacaciones</a></p>
-<p><a href="#">Solicitudes pendientes de aprobacion</a></p>
+<p><a href="{{ url('solicitudes_pendientes') }}">Lista de solicitudes pendientes de aprobacion</a></p>
 <p><a href="#">Solicitudes gestionadas y finalizadas</a></p>
 
 {% if is_granted('ROLE_GESTOR') %}
