--- a/src/Permiso/GestionBundle/Resources/views/Solicitud/prueba.html.twig
+++ b/src/Permiso/GestionBundle/Resources/views/Solicitud/prueba.html.twig
@@ -1,9 +1,2 @@
-<pdf>
 
-    <dynamic-page>
-    
-        <p>El usuario es: {{ solicitud.empleado.username }}
-    
-    </dynamic-page>
-    
-</pdf>
+<p>La fecha es: {{ fecha }}</p>
