--- a/src/Permiso/GestionBundle/Resources/views/Solicitud/vacacionesForm.html.twig
+++ b/src/Permiso/GestionBundle/Resources/views/Solicitud/vacacionesForm.html.twig
@@ -3,6 +3,8 @@
 <h2>Solicitud de vacaciones</h2>
 <p>Por favor introduzca los siguientes datos:</p>
 
+<p>Días de vacaciones disponibles: {{ diasVacacionesDisponibles }}</p>
+
 {% if editar == TRUE %}
 <form novalidate="true" action="{{ path('editar_vacaciones', {'id': id}) }}" method="post">    
 {% else %}
@@ -22,13 +24,20 @@
     
     <div>
         <p>{{ form_label(form.diasPedidos) }}</p>
-        <p>{{ form_errors(form.diasPedidos) }}</p>
         <p>{{ form_widget(form.diasPedidos) }}</p>
+        <p>{{ form_errors(form.diasPedidos) }}</p>
     </div>
 
     {{ form_rest(form) }}
     <input type="submit" value='{{ valorSubmit }}' />
 </form>
+        
+<br />
+{% if app.session.hasFlash('aviso') %}
+    <div class="aviso">
+        {{ app.session.flash('aviso') }}
+    </div>
+{% endif %}
 
 <p><a href="{{ url('inicio_aplicacion') }}">Volver al menú principal</a></p>
 
